--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <title>AMN Affiliate Marketing Program</title> 
+  
+  <!-- Pixel Code -->
+  <script src="https://cdn.stakecut.com/pixel/pixel.min.js"></script>
+  <!-- End Pixel Code -->
+
   <style>
         /* General Body Styling */
         body {
@@ -62,28 +67,6 @@
             height: 100%;
         }
 
-        /* Button Styling */
-        .button {
-            display: block;
-            width: 100%;
-            margin: 20px 0;
-            padding: 15px;
-            text-align: center;
-            background: linear-gradient(to right, #e74c3c, #3498db);
-            color: #fff;
-            font-weight: bold;
-            text-decoration: none;
-            border-radius: 25px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            transition: all 0.3s ease;
-        }
-
-        .button:hover {
-            background: linear-gradient(to right, #3498db, #e74c3c);
-            transform: translateY(-3px);
-            box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
-        }
-
         /* Image Gallery - Single Vertical Row */
         .image-gallery img {
             width: 100%;
@@ -127,7 +110,8 @@
    <p>By starting this side hustle, you can easily earn $50–$100 weekly, regardless of how tough the economy gets.</p> 
    <p>It’s simple, proven, and accessible to anyone willing to take the first step. Don’t wait for things to change—make the change happen now!</p> 
    <p style="text-align: center; font-weight: bold;">(Click the play button below for full details)</p> 
-   <div class="video-wrapper"> <iframe src="https://www.youtube.com/embed/5394oSXqUds?start=300&amp;autoplay=1&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+   <div class="video-wrapper"> 
+    <iframe src="https://www.youtube.com/embed/5394oSXqUds?start=300&amp;autoplay=1&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
    </div> 
    <h2>Join Other Earners Today!</h2> 
    <div class="image-gallery"> 
@@ -151,7 +135,12 @@
    <h3>Limited-Time Offer</h3> 
    <p>To get access to this program would cost you 50,000 naira ($40) only.</p> 
    <p><strong>But today, you can get access for just 15,000 naira ($12) only!</strong></p> 
-   <p style="color: red; font-weight: bold;">Note: This discounted price is for a limited time only!</p> <a class="button" href="#">Register Now for 15,000 Naira</a> 
+   <p style="color: red; font-weight: bold;">Note: This discounted price is for a limited time only!</p> 
+   
+   <!-- Replaced Button -->
+   <a href="#"><img src="https://cdn.stakecut.com/buttons/button2.png" alt="544171" id="stakecut-button" width="100%" height="auto"></a>
+   <!-- End Replaced Button -->
+
    <h3>Other Student Testimonials</h3> 
    <div class="image-gallery"> 
     <img src="https://i.postimg.cc/7YLV4wdZ/download.png" alt="Testimonial 6"> 
@@ -165,5 +154,5 @@
   <footer> 
    <p>© 2024 AMN Affiliate Marketing Program. All Rights Reserved.</p> 
   </footer> 
- 
-</body></html>
+ </body> 
+</html>
