--- a/index.html
+++ b/index.html
@@ -3,12 +3,8 @@
  <head> 
   <meta charset="UTF-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <title>AMN Affiliate Marketing Program</title> 
-  
-  <!-- Pixel Code -->
-  <script src="https://cdn.stakecut.com/pixel/pixel.min.js"></script>
-  <!-- End Pixel Code -->
-
+  <title>AMN Affiliate Marketing Program</title> <!-- Stakecut Pixel --> 
+  <script src="https://cdn.stakecut.com/pixel/pixel.min.js"></script> 
   <style>
         /* General Body Styling */
         body {
@@ -110,8 +106,7 @@
    <p>By starting this side hustle, you can easily earn $50–$100 weekly, regardless of how tough the economy gets.</p> 
    <p>It’s simple, proven, and accessible to anyone willing to take the first step. Don’t wait for things to change—make the change happen now!</p> 
    <p style="text-align: center; font-weight: bold;">(Click the play button below for full details)</p> 
-   <div class="video-wrapper"> 
-    <iframe src="https://www.youtube.com/embed/5394oSXqUds?start=300&amp;autoplay=1&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+   <div class="video-wrapper"> <iframe src="https://www.youtube.com/embed/5394oSXqUds?start=300&amp;autoplay=1&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
    </div> 
    <h2>Join Other Earners Today!</h2> 
    <div class="image-gallery"> 
@@ -135,12 +130,7 @@
    <h3>Limited-Time Offer</h3> 
    <p>To get access to this program would cost you 50,000 naira ($40) only.</p> 
    <p><strong>But today, you can get access for just 15,000 naira ($12) only!</strong></p> 
-   <p style="color: red; font-weight: bold;">Note: This discounted price is for a limited time only!</p> 
-   
-   <!-- Replaced Button -->
-   <a href="#"><img src="https://cdn.stakecut.com/buttons/button2.png" alt="544171" id="stakecut-button" width="100%" height="auto"></a>
-   <!-- End Replaced Button -->
-
+   <p style="color: red; font-weight: bold;">Note: This discounted price is for a limited time only!</p> <a class="button" href="#">Register Now for 15,000 Naira</a> 
    <h3>Other Student Testimonials</h3> 
    <div class="image-gallery"> 
     <img src="https://i.postimg.cc/7YLV4wdZ/download.png" alt="Testimonial 6"> 
@@ -150,9 +140,12 @@
     <img src="https://i.postimg.cc/nrgvsZC7/tega.png" alt="Testimonial 10"> 
    </div> 
    <p><strong>See you on the inside!</strong></p> 
+  </div> <!-- Stakecut Button at the Bottom --> 
+  <div style="text-align: center; margin: 20px 0;"> 
+   <img src="https://cdn.stakecut.com/buttons/button3.png" alt="263167" id="stakecut-button" width="100%" height="auto"> 
   </div> 
   <footer> 
    <p>© 2024 AMN Affiliate Marketing Program. All Rights Reserved.</p> 
   </footer> 
- </body> 
+ </body>
 </html>
